RESOLVED FIXED76094
IndexedDB: Version change transaction should abort if constraints fail during createIndex
https://bugs.webkit.org/show_bug.cgi?id=76094
Summary IndexedDB: Version change transaction should abort if constraints fail during...
Joshua Bell
Reported 2012-01-11 12:24:58 PST
IndexedDB: Version change transaction should abort if constraints fail during createIndex
Attachments
Patch (10.71 KB, patch)
2012-01-11 12:25 PST, Joshua Bell
no flags
Joshua Bell
Comment 1 2012-01-11 12:25:16 PST
WebKit Review Bot
Comment 2 2012-01-11 15:51:32 PST
Comment on attachment 122070 [details] Patch Clearing flags on attachment: 122070 Committed r104755: <http://trac.webkit.org/changeset/104755>
WebKit Review Bot
Comment 3 2012-01-11 15:51:36 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.