IndexedDB: Version change transaction should abort if constraints fail during createIndex https://bugs.webkit.org/show_bug.cgi?id=76094

Patch by Joshua Bell <jsbell@chromium.org> on 2012-01-11
Reviewed by Tony Chang.

Source/WebCore:

Test: storage/indexeddb/index-population.html

* storage/IDBIndexBackendImpl.cpp:
(WebCore::IDBIndexBackendImpl::addingKeyAllowed):
* storage/IDBIndexBackendImpl.h:
* storage/IDBLevelDBBackingStore.cpp:
(WebCore::IDBLevelDBBackingStore::forEachObjectStoreRecord):
* storage/IDBObjectStoreBackendImpl.cpp:

LayoutTests:

* storage/indexeddb/index-population-expected.txt: Added.
* storage/indexeddb/index-population.html: Added.

Canonical link: https://commits.webkit.org/92925@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104755 268f45cc-cd09-0410-ab3c-d52691b4dbfc